Update Icons, favicon, title

--- a/my_gukbang_clock_flutter/web/manifest.json
+++ b/my_gukbang_clock_flutter/web/manifest.json
@@ -1,32 +1,32 @@
 {
-    "name": "my_gukbang_clock_flutter",
-    "short_name": "my_gukbang_clock_flutter",
+    "name": "양시준의 국방시계",
+    "short_name": "양시준의 국방시계",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
     "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "description": "양시준의 국방시계입니다.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
         {
-            "src": "icons/Icon-192.png",
+            "src": "icons/gukbang-clock-icon-192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "icons/Icon-512.png",
+            "src": "icons/gukbang-clock-icon-512.png",
             "sizes": "512x512",
             "type": "image/png"
         },
         {
-            "src": "icons/Icon-maskable-192.png",
+            "src": "icons/gukbang-clock-icon-maskable-192.png",
             "sizes": "192x192",
             "type": "image/png",
             "purpose": "maskable"
         },
         {
-            "src": "icons/Icon-maskable-512.png",
+            "src": "icons/gukbang-clock-icon-maskable-512.png",
             "sizes": "512x512",
             "type": "image/png",
             "purpose": "maskable"
